--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,9 @@
 before_install: sudo apt-get install jq
-install: ./tools/abjsonchk.sh
-script: true
-
+script: make
+deploy:
+  provider: pages
+  skip-cleanup: true
+  github-token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
+  keep-history: true
+  on:
+    branch: netlify
