--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,6 @@ deploy:
   skip-cleanup: true
   github-token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
   keep-history: true
+  target-branch: netlify
   on:
-    branch: netlify
+    branch: master
