--- a/tools/Dockerfile
+++ b/tools/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine:latest
 
-RUN apk add python3 && pip3 install requests && mkdir -p /opt/sellorm
+RUN apk add python3 py3-pip && pip3 install requests && mkdir -p /opt/sellorm
 
 COPY ab200.py /opt/sellorm/
 
