--- a/.github/workflows/gha-ci.yml
+++ b/.github/workflows/gha-ci.yml
@@ -28,6 +28,12 @@ jobs:
       - name: Install dependencies
         run: sudo apt-get install -y jq
 
+      # Runs a set of commands using the runners shell
+      - name: Push the changes back to the repo
+        run: |
+          git config --global user.name "GitHub action"
+          git config --global user.email "github@5vcc.com"
+          
       # Runs a single command using the runners shell
       - name: make the new json file
         run: make
@@ -35,9 +41,6 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Push the changes back to the repo
         run: |
-          git config --global user.name "GitHub action"
-          git config --global user.email "github@5vcc.com"
-
           git checkout -b netlify
           git commit -am "Automated GitHub action commit"
           git push
