--- a/.github/workflows/gha-ci.yml
+++ b/.github/workflows/gha-ci.yml
@@ -33,7 +33,7 @@ jobs:
         run: |
           git config --global user.name "GitHub action"
           git config --global user.email "github@5vcc.com"
-                    git checkout -b netlify
+          git checkout -b netlify
           
       # Runs a single command using the runners shell
       - name: make the new json file
@@ -42,5 +42,6 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Push the changes back to the repo
         run: |
+          git add docs/sites.json
           git commit -am "Automated GitHub action commit"
           git push
