--- a/.github/workflows/gha-ci.yml
+++ b/.github/workflows/gha-ci.yml
@@ -1,14 +1,13 @@
-# This is a basic workflow to help you get started with Actions
+# Primary CI workflow for awesome-blogdown.com
 
 name: CI
 
 # Controls when the action will run. 
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
+  # Triggers the workflow on push 
   push:
     branches: [ master ]
-  pull_request:
-    branches: [ master ]
+
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
